# RAG-Complete-Cook-Book

./: Agentic_Chunking.py  Binary_Quantization.py  Contextual.py  Contextual_Chunking.py  Data_Ingestion_Loaders.ipynb  Dense.py  Hybrid_Search.py  Hybrid_Search_Results_Analysis.md  Matryoshka_Representation_Learning.py  Parent-Child-chunking-Indexing.py  Recursive_Chunking.py  Semantic_Chunking.py  Sparse.py  Storing_in_ChromaDB.ipynb  chunking.ipynb  embeddings.md  generatePDF.py  hybrid_search_1.py  kgraphapp.py  main.py  naive_chunking.py  pyproject.toml  seeing_an_embedding.ipynb
jan_10_26_presentation_Agentic RAG Demo/: ARCHITECTURE.md  README.md  agentic_workflow.py  app.py  chunking_engine.py  config.py  ragas_evaluator.py  requirements.txt  test_components.py
my_vector_db/: chroma.sqlite3
my_vector_db/Binary Quantization_VDBase/: chroma.sqlite3
my_vector_db/Contextual_VDBase/: chroma.sqlite3
my_vector_db/Dense_VDBase/: chroma.sqlite3
my_vector_db/Matryoshka Representation Learning_VDBase/: chroma.sqlite3
my_vector_db/Sparse_VDBase/: chroma.sqlite3
