[project]
name = "rag-complete-cook-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.6",
    "pypdf>=6.5.0",
    "python-dotenv>=1.2.1",
]
