[project]
name = "rag-complete-cook-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.0",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-neo4j>=0.6.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "pypdf>=6.5.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.7",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.2",
    "streamlit-agraph>=0.0.45",
]
